<resources>
    <string name="app_name">Pic2Fro</string>
    <string name="add_image">No images found. Tap to add.</string>
    <string name="add_time">Time per pic</string>
    <string name="add_count">Repetition count</string>
    <string name="insert_audio">Pick audio</string>
    <string name="record_audio">Record audio</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="need_permission">Can\'t %s without this permission</string>
    <string name="player">Player</string>
    <string name="saving">Saving…</string>
    <string name="saving_msg">Please wait while video saves</string>
    <string name="send_to">Send video to</string>
    <string name="creator">Create video</string>
    <string name="videos">Gallery</string>
    <string name="create_video">Create</string>
    <string name="exit">Exit</string>
    <string name="error_video">Error saving video.</string>
    <string name="saved">Saved %s</string>
    <string name="enter_file_name">Enter video name</string>
    <string name="pick_audio">Pick audio</string>
    <string name="select_image">Select at least one image.</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="record_audio_stop">Stop</string>
    <string name="error_audio">Error recording audio</string>
    <string name="record_audio_start">Start</string>
    <string name="video_exists">A video with this name exists. Overwrite?</string>
    <string name="overwrite">Overwrite</string>
    <string name="rechoose">Rechoose</string>

    <string-array name="times">
        <item>0.2s</item>
        <item>0.4s</item>
        <item>0.6s</item>
        <item>0.8s</item>
        <item>1.0s</item>
        <item>1.2s</item>
    </string-array>

    <string-array name="counts">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>
