<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="2"
    tools:context=".activities.CreatorActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.GridLayout
            android:id="@+id/images_gd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            grid:useDefaultMargins="true"
            grid:columnCount="2"
            grid:orientation="vertical"
            grid:rowCount="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                grid:layout_columnWeight="1"
                grid:layout_rowWeight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/image" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:onClick="removeChild"
                    android:layout_alignParentTop="true"
                    android:background="@color/light_red"
                    android:src="@drawable/ic_action_remove" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                grid:layout_columnWeight="1"
                grid:layout_rowWeight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/image" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="removeChild"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/light_red"
                    android:src="@drawable/ic_action_remove" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                grid:layout_columnWeight="1"
                grid:layout_rowWeight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/image" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:onClick="removeChild"
                    android:background="@color/light_red"
                    android:src="@drawable/ic_action_remove" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                grid:layout_columnWeight="1"
                grid:layout_rowWeight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/image" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:onClick="removeChild"
                    android:layout_alignParentTop="true"
                    android:background="@color/light_red"
                    android:src="@drawable/ic_action_remove" />
            </RelativeLayout>

            <TextView
                android:id="@+id/add_image_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/add_image"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="visible" />
        </android.support.v7.widget.GridLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="3">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/padding"
                android:paddingStart="@dimen/padding"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/add_time"
                    android:textAppearance="?android:textAppearanceMedium" />

                <Spinner
                    android:id="@+id/time_spinner"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="3"
                    android:background="@drawable/spinner_style"
                    android:dropDownSelector="@drawable/spinner_style"
                    android:entries="@array/times"
                    android:gravity="center_vertical"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/padding"
                android:paddingStart="@dimen/padding"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:text="@string/add_count"
                    android:textAppearance="?android:textAppearanceMedium" />

                <Spinner
                    android:id="@+id/count_spinner"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="2"
                    android:background="@drawable/spinner_style"
                    android:entries="@array/counts"
                    android:gravity="center_vertical"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <android.support.v7.widget.CardView
                android:id="@+id/audio_pick_cv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="3dp"
                android:layout_weight="2"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_audio_pick" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="@string/insert_audio"
                        android:textAppearance="?android:textAppearanceMedium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/audio_record_cv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_weight="2"
                android:clickable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_audio_record" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:text="@string/record_audio"
                        android:textAppearance="?android:textAppearanceMedium" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
